# ogr2vrt_simple

./: .gitignore  LICENSE  Makefile  README.md  conso-ener.csv  main.py  ogr2vrt.py  pyproject.toml  requirements.txt
ogr2vrt_simple/: __init__.py  cli.py
ogr2vrt_simple/templates/: vrt.j2
ogr2vrt_simple/utils/: data_structures.py  io_utils.py  ogr_utils.py  string_utils.py
ogr2vrt_simple/vrt_data_sources/: __init__.py  abstract_source.py  file_source.py  http_source.py
sample_data/: conso-ener-windows1252.csv  locations.7z  locations.rar
sample_data/world/: empty.xlsx
templates/: vrt.j2
tests/: test_io_utils.py  test_ogr_utils.py  test_string_utils.py  test_vrt_data_source_file.py  test_vrt_data_source_http.py
