[tool.poetry]
name = "ogr2vrt-simple"
version = "0.1.9"
description = "Generate a simple VRT file for data transformations"
authors = ["Jean Pommier <jean.pommier@pi-geosolutions.fr>"]
readme = "README.md"
repository = "https://github.com/jeanpommier/ogr2vrt_simple/"
keywords = ["gdal", "ogr", "VRT", "geospatial"]
packages = [
    { include = "ogr2vrt_simple" },
]

[tool.poetry.dependencies]
python = "^3.9"
Jinja2 = "^3.1.2"
MarkupSafe = "^2.1.3"
Unidecode = "^1.3.7"
click = "^8.1.7"
humanize = "^4.8.0"
#GDAL = "3.6.2"

[tool.poetry.scripts]
ogr2vrt_cli = "ogr2vrt_simple.cli:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
